# s2

./: .git_projects  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/s2/: algorithm.h  array.h  character_encoding  functional  future  pair.h  span.h  string  string.h  vector  vector.h
include/s2/detail/: async_queue.h  classify.h  default_executor.h  encoding.h  encoding_cp437.h  encoding_iso8859_1.h  encoding_iso8859_15.h  encoding_ucs2.h  encoding_utf16.h  encoding_utf32.h  encoding_utf8.h  encoding_utf8_modified.h  encoding_windows1252.h  encoding_wtf8.h  future.h  future_detail.h  future_impl.h  null_iterator  null_iterator.h  promise.h  raw_encoding_cp437.h  raw_encoding_iso8859_1.h  raw_encoding_iso8859_15.h  raw_encoding_ucs2.h  raw_encoding_utf16.h  raw_encoding_utf32.h  raw_encoding_utf8.h  raw_encoding_windows1252.h  rope.h  rope_detail.h  shared_state.h  string.h  string_algorithm.h  string_view.h  vector.h
test/string/: test_cp437.cpp  test_iso8859_1.cpp  test_iso8859_15.cpp  test_simple.cpp  test_substr_view.cpp  test_ucs2.cpp  test_utf16.cpp  test_utf32.cpp  test_utf8.cpp  test_utf8_modified.cpp  test_windows1252.cpp  test_wtf8.cpp
test/vector/: test_simple.cpp
tests/: CMakeLists.txt
tests/functional/: test_simple.cpp
tests/future/: test_simple.cpp
tests/string/: test_cp437.cpp  test_iso8859_1.cpp  test_iso8859_15.cpp  test_simple.cpp  test_substr_view.cpp  test_ucs2.cpp  test_utf16.cpp  test_utf32.cpp  test_utf8.cpp  test_utf8_modified.cpp  test_windows1252.cpp  test_wtf8.cpp
tests/vector/: test_simple.cpp
